# tracing-envoy-fastapi-redis-sample

./: .dockeringnore  .gitignore  Makefile  README.md  custom_logger.py  docker-compose.yaml  main.py  pyproject.toml  redis_connection.py  requirements.txt  tracer.py
.github/: dependabot.yml
.github/workflows/: app-lint.yaml
scripts/: data_generator.sh  datum_generator.sh
src/: main.py
