[tool.poetry]
name = "tracing-envoy-fastapi-redis-sample"
version = "0.1.0"
description = ""
authors = ["kazune"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"
requests = "^2.26.0"
loguru = "^0.5.3"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
autoflake = "^1.4"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''
