[tool.poetry]
name = "tracing-envoy-fastapi-redis-sample"
version = "0.1.0"
description = ""
authors = ["kazune"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
loguru = "^0.6.0"
redis = "^4.1.3"
jaeger-client = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3"
autoflake = "^1.4"
isort = "^5.10.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''
